--- a/pass4/Latex/Resonance_Search_2016.tex
+++ b/pass4/Latex/Resonance_Search_2016.tex
@@ -51,12 +51,20 @@ Describe the data, beam energy, beam current, target runs, etc.
 This section describes all the cuts that are applied to get the final vertex candidate distribution. 
 The main goal of event selection cuts is to maximize signal sensitivity.
 
-In this analysis only events that with ``Pair1'' trigger are used.
+In this analysis only events with ``Pair1'' trigger (see \cite{TriggerNote} for the description of HPS triggers) are used.
 
 \subsection{Cluster timing cuts}
-
-The readout window of ECal FADC data is 200 ns. Clusters coming from the physics events, that made generated the trigger, are located in a narrow time range in the readout window around $\mathrm{t = 56\; ns}$.
-
+The readout window of ECal FADC data is 200 ns. Clusters coming from the physics events, that generated the trigger, are located in a narrow time range (few ns width because of the trigger jitter) in the readout window around $\mathrm{t = 56\; ns}$.
+%%%%%%%%%%%%%%%%%%%%%%%%%% F I G U R E %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:clE_t:Top}\grinp[width=0.45\tw]{Figs/cl_t_E_Top.pdf}}
+ \subfloat{\label{fig:clE_t:Bot}\grinp[width=0.45\tw]{Figs/cl_t_E_Bot.pdf}}
+ \caption{``time vs Energy'' distributions of ECal clusters in the Top (Left) and Bottom (Right) half. Red curves in the in the right plot indicate cuts that are applied to clusters in the bottom half for the initial cluster selection. See the text for the description of the difference between left and right plots.}
+ \label{fig:cl_E_T_plots}
+\end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%% F I G U R E %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+In Fig.\ref{fig:cl_E_T_plots} shown ``time vs Energy'' distributions of ECal clusters in the Top (Left) and Bottom (Right) halves. The bulge of events in the right plot are clusters that generated the trigger, and also trigger time is defined by these clusters. The noticeable energy dependence is due to the so called ``time walk Corrections'' \cite{ECalTimeCorr}. During initial event selection only clusters that are inside the outlined red curves are used, since the rest are accidentals that didn't come from the beam bunch generating the trigger. One can notice that for the clusters in the top half, in addition to the central bulge, there is an extra occupancy of events in region ($\mathrm{ 40\;ns < t_{cl} < 70\;ns }$). This is because the coincidence time between clusters in the ``Pair'' trigger was $\mathrm{12\;ns}$ \cite{TriggerNote}, and the trigger time is determined by the bottom cluster. Unlike to clusters in the bottom half, in the initial event selection, we have not cut on time of the top cluster, but rater we have applied cut on the cluster time difference between top and bottom clusters.
 
 \subsection{Track $\chi^{2}$ cuts}
 \subsection{Track-Cluster Matching}
@@ -70,6 +78,12 @@ Describe L1 and $\mathrm{d_{0}}$ cuts.
 
 \section{Study of systematics}
 Here goes studies on systematics
+
+\begin{thebibliography}{55}
+ \bibitem{TriggerNote} Kyle McCarty, Valery Kubarovsky and Benjamin Raydo, ``Description and Tuning of the HPS Trigger'', HPS Note 2018-002
+ \bibitem{ECalTimeCorr} Holly Szumila-Vance, ``HPS Ecal Timing Calibration for the
+Spring 2015 Engineering Run'', HPS Note 2015-011.
+\end{thebibliography}
 
  
 \end{document}
