Minor addition in the tex file

--- a/pass4/Latex/Resonance_Search_2016.tex
+++ b/pass4/Latex/Resonance_Search_2016.tex
@@ -130,7 +130,10 @@ The $\mathrm{\frac{\displaystyle S}{\displaystyle \sqrt{S + Bgr}}} $ ratio as a 
 \subsection{Track-Cluster Matching}
 This section should include both spatial and time matching of clusters and tracks.
 \subsection{WAB Suppresion cuts}
-Describe L1 and $\mathrm{d_{0}}$ cuts.
+Describe L1 and $\mathrm{d_{0}}$ cuts. \\
+Mention why L1 is important, addition of suppresing WABs, it also significantly
+improves the mass resolution.
+
 
 \section{Parametrization of Mass resolution.}
 
